[project]
name = "securitykit"
version = "0.1.0"
description = "A modular security toolkit for password hashing and policies"
readme = "README.md"
requires-python = ">=3.10"

# For minimal dependencies, only include what's necessary for core functionality
dependencies = [
    "argon2-cffi>=21.3.0",
]

# Optional dependencies for development and benchmarking
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",   # testcoverage
    "mypy>=1.10",        # type checking 
    "black>=24.0",       # code formatter
    "ruff>=0.5",         # linter 
]
bench = [
    "rich>=13.0",        # clean output 
    "click>=8.1",        # CLI-helper
]

# Metadata for authors and license
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Configuration for development tools
[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q --disable-warnings"
testpaths = ["tests"]

# Configuration for code formatting and type checking
[tool.black]
line-length = 88
target-version = ["py310"]

# Configuration for type checking
[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
