[project]
name = "securitykit"
version = "0.2.0"
description = "A modular security toolkit for password hashing and policies"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "argon2-cffi>=21.3.0",
    "bcrypt>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.10",
    "black>=24.0",
    "ruff>=0.5",
]
bench = [
    "rich>=13.0",
    "click>=8.1",
    "tqdm>=4.65",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra -q --disable-warnings"
testpaths = ["tests_new"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
